--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,42 @@
 @import 'tailwindcss';
-:root {
+@theme {
   /* primary */
-  --primary-50: #fefce8;
-  --primary-200: #fef08a;
-  --primary-300: #fde047;
-  --primary-400: #facc15;
-  --primary-500: #eab308;
-  --primary-600: #ca8a04;
-  --primary-700: #a16207;
-  --primary-800: #854d0e;
-  --primary-900: #713f12;
-  /* success */
-  --success-100: #dcfce7;
-  --success-500: #22c55e;
-  --success-600: #16a34a;
-  --success-800: #166534;
-  /* gray */
-  --gray-50: #f9fafb;
-  --gray-100: #f3f4f6;
-  --gray-200: #e5e7eb;
-  --gray-300: #d1d5db;
-  --gray-400: #9ca3af;
-  --gray-500: #6b7280;
-  --gray-600: #4b5563;
-  --gray-700: #374151;
-  --gray-800: #1f2937;
-  --gray-900: #111827;
+  --color-primary-50: #fefce8;
+  --color-primary-200: #fef08a;
+  --color-primary-300: #fde047;
+  --color-primary-400: #facc15;
+  --color-primary-500: #eab308;
+  --color-primary-600: #ca8a04;
+  --color-primary-700: #a16207;
+  --color-primary-800: #854d0e;
+  --color-primary-900: #713f12;
+  /*success*/
+  --color-success-100: #dcfce7;
+  --color-success-500: #22c55e;
+  --color-success-600: #16a34a;
+  --color-success-800: #166534;
+  /* / gray / */
+  --color-gray-50: #f9fafb;
+  --color-gray-100: #f3f4f6;
+  --color-gray-200: #e5e7eb;
+  --color-gray-300: #d1d5db;
+  --color-gray-400: #9ca3af;
+  --color-gray-500: #6b7280;
+  --color-gray-600: #4b5563;
+  --color-gray-700: #374151;
+  --color-gray-800: #1f2937;
+  --color-gray-900: #111827;
   /* danger */
-  --danger-100: #fca5a5;
-  --danger-500: #ef4444;
-  --danger-600: #dc2626;
-  --danger-800: #991b1b;
+  --color-danger-100: #fca5a5;
+  --color-danger-500: #ef4444;
+  --color-danger-600: #dc2626;
+  --color-danger-800: #991b1b;
+
+  --color-basic-white: #ffffff;
 }
-body {
+*::after {
   font-family: 'Pretendard Variable', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
