chore: primary-100 추가 ( #22 )

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @theme {
   /* primary */
   --color-primary-50: #fefce8;
+  --color-primary-100: #fef9c3;
   --color-primary-200: #fef08a;
   --color-primary-300: #fde047;
   --color-primary-400: #facc15;
