--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,17 @@ body {
   font-weight: 500;
   font-size: 12px;
 }
+:root {
+  --toastify-color-light: transparent;
+  --toastify-color-progress-success: #22c55e;
+  --toastify-color-progress-warning: #facc15;
+  --toastify-color-progress-error: #dc2626;
+}
+
+.Toastify__toast {
+  @apply relative mb-4 flex min-h-0 cursor-pointer justify-between overflow-hidden rounded-lg bg-transparent p-0 shadow-none;
+}
+
+.Toastify__toast-body {
+  @apply m-0 p-0;
+}
