--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,37 @@ body {
 .Toastify__toast-body {
   @apply m-0 p-0;
 }
+
+.verify-color {
+  background-color: var(--color-primary-100);
+  color: var(--color-primary-500);
+  transition: all 0.2s;
+}
+
+.verify-color:hover {
+  background-color: var(--color-primary-200);
+  color: var(--color-primary-600);
+}
+
+.before-verify-color {
+  background-color: var(--color-gray-300);
+  color: var(--color-gray-700);
+}
+
+.gender-click-color {
+  background-color: var(--color-primary-100);
+  color: var(--color-primary-600);
+  height: 42px;
+  width: 80px;
+  cursor: pointer;
+  border: 1px solid;
+}
+
+.before-gender-click-color {
+  background-color: var(--color-gray-200);
+  color: var(--color-gray-600);
+  height: 42px;
+  width: 80px;
+  cursor: pointer;
+  border: 1px solid var(--color-gray-300);
+}
