--- a/src/index.css
+++ b/src/index.css
@@ -29,9 +29,12 @@
   --color-gray-800: #1f2937;
   --color-gray-900: #111827;
   /* danger */
+  --color-danger-30: #fef2f2;
+  --color-danger-50: #fee2e2;
   --color-danger-100: #fca5a5;
   --color-danger-500: #ef4444;
   --color-danger-600: #dc2626;
+  --color-danger-700: #b91c1c;
   --color-danger-800: #991b1b;
 
   --color-basic-white: #ffffff;
