--- a/src/index.css
+++ b/src/index.css
@@ -185,3 +185,10 @@ body {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
+/*  챗팅 css */
+@layer components {
+  .centralize {
+    @apply flex items-center justify-center;
+  }
+}
